# Signpen_V2

./: .env.local.example  FIREBASE_STORAGE_CORS_FIX.md  README.md  firestore.rules  next.config.ts  package-lock.json  package.json  storage-cors.json  storage.rules  tailwind.config.ts
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
docs/: backend.json  blueprint.md
src/: package.json  storage.rules
src/ai/: dev.ts
src/ai/flows/: summarize-signature-sentiments.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[studentId]/: page.tsx
src/app/api/ip/: route.ts
src/app/api/sentiment-summary/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/login/: page.tsx
src/components/: FirebaseErrorListener.tsx
src/components/3d/: TShirtBoard.tsx  TShirtCanvas.tsx  TShirtSigningModal.tsx
src/components/auth/: auth-form.tsx
src/components/cards/: card-editor.tsx  thank-you-card.tsx
src/components/common/: confetti.tsx
src/components/dashboard/: create-profile.tsx  dashboard-client.tsx  sentiment-summary.tsx  share-link.tsx  signing-page-preview.tsx  user-nav.tsx
src/components/signature/: client-signature-gallery.tsx  instruction-dialog.tsx  public-sign-out-page.tsx  signature-canvas-gallery.tsx  signature-canvas.tsx  signature-gallery.tsx  thank-you-dialog.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  sidebar.tsx
src/firebase/: config.ts  storage.ts
src/firebase/firestore/: use-collection.tsx  use-doc.tsx
src/lib/: error-display.ts  image-upload.ts  mock-data.ts  placeholder-images.json  student-page.ts  types.ts
(+3 files in other folders)
